# keg

./: .gitignore  CHANGELOG.md  README.md  conftest.py  listen.py  pyproject.toml  today.py
.github/workflows/: publish.yaml  run-tests-on-push.yml
docs/: brick_formats.md  chapter_blurbs.md  idea_brick_formats.md  idea_formats.md  keywords_by_chapter.md
docs/ch17_brick_formats/: bk00001.md  bk00002.md  bk00005.md  bk00007.md  bk00100.md  bk00101.md  bk00102.md  bk00103.md  bk00104.md  bk00105.md  bk00106.md  bk00112.md  bk00119.md  bk00120.md  bk00121.md  bk00122.md  bk00123.md  bk00124.md  bk00125.md  bk00126.md  bk00127.md  bk00128.md  bk00129.md  bk00136.md  bk00142.md  bk00143.md  bk00144.md  bk00145.md  bk00150.md  bk00151.md  bk00152.md  bk00153.md  bk00154.md  bk00155.md  bk00156.md  bk00157.md  bk00158.md  bk00159.md  bk00170.md  bk00171.md  (+3 more)
docs/ch17_idea_brick_formats/: br00002.md  br00020.md  br00021.md  br00024.md
docs/ch17_idea_formats/: br00113.md  br00115.md  br00116.md  br00117.md  ii00001.md  ii00002.md  ii00005.md  ii00007.md  ii00071.md  ii00072.md  ii00073.md  ii00074.md  ii00100.md  ii00101.md  ii00102.md  ii00103.md  ii00104.md  ii00105.md  ii00106.md  ii00111.md  ii00112.md  ii00113.md  ii00119.md  ii00120.md  ii00121.md  ii00122.md  ii00123.md  ii00124.md  ii00125.md  ii00126.md  ii00127.md  ii00128.md  ii00129.md  ii00136.md  ii00142.md  ii00143.md  ii00144.md  ii00145.md  ii00150.md  ii00151.md  (+13 more)
src/: listen.py
src/ch00_py/: chapter_desc_main.py  db_toolbox.py  dict_toolbox.py  file_toolbox.py  keyword_class_builder.py  version_reader.py  (+1 more)
(+1068 files in other folders)
